--- a/index.html
+++ b/index.html
@@ -4,12 +4,89 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <link rel="stylesheet" href="./css/style.css">
     <title>Vue Todolist</title>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="text-center">
+                    <h1 class="mt-4">{{titleapp}}</h1>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12">
+                <div class="content">
+                    <h3><strong>La mia Todolist</strong></h3>
+                    <hr>
+                    <ul class="list-unstyled">
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                1
+                            </div><div>
+                                <button class="btn btn-sm btn-danger"></button><i class="fas fa-trash"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                2
+                            </div><div>
+                                <button class="btn btn-sm btn-danger"></button><i class="fas fa-trash"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                3
+                            </div><div>
+                                <button class="btn btn-sm btn-danger"></button><i class="fas fa-trash"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                4
+                            </div><div>
+                                <button class="btn btn-sm btn-danger"></button><i class="fas fa-trash"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                5
+                            </div><div>
+                                <button class="btn btn-sm btn-danger"></button><i class="fas fa-trash"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                6
+                            </div><div>
+                                <button class="btn btn-sm btn-danger"></button><i class="fas fa-trash"></i>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="d-flex justify-content-between">
+                                7
+                            </div><div>
+                                <button class="btn btn-sm btn-danger"></button><i class="fas fa-trash"></i>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="input-group">
+                        <div class="input-field">
+                            <input type="text" class="input-task" placeholder="Aggiungi task" name="new_task" id="new_task">
+                        </div>
+                        <div class="input-button">
+                            <button class="btn btn-sm btn-succes">
+                                <i class="fas fa-plus mr-2"></i>
+                            </button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
     <script src='https://unpkg.com/vue@3/dist/vue.global.js'></script>
